fix: configurar CorsConfigurationSource en Spring Security para permitir preflight de Vercel